# python-web-development-project-lvl4

./: .gitignore  Makefile  README.md  db.sqlite3  pyproject.toml  requirements.txt
task_manager/: Makefile  settings.py  urls.py
task_manager/core/: permissions.py  views.py
task_manager/labels/: models.py  urls.py  views.py
task_manager/labels/migrations/: 0001_initial.py  0002_alter_label_options.py  0003_alter_label_name.py
task_manager/statuses/: models.py  urls.py  views.py
task_manager/statuses/migrations/: 0001_initial.py  0002_alter_status_options.py  0002_rename_status_name_status_name_and_more.py  0003_alter_status_creatad_at_alter_status_name.py  0003_alter_status_options.py  0004_alter_status_name.py
task_manager/task_manager/: settings.py  urls.py  wsgi.py
task_manager/tasks/: forms.py  models.py  urls.py  views.py
task_manager/tasks/migrations/: 0001_initial.py  0002_alter_task_status.py  0003_alter_task_status.py  0004_alter_task_status.py  0005_remove_task_labels_task_labels.py  0006_alter_task_labels.py  0007_alter_task_options.py  0008_alter_task_options.py  0009_alter_task_description_alter_task_executor_and_more.py  0010_alter_task_executor_alter_task_labels.py
task_manager/templates/: base.html  form.html  index.html
task_manager/templates/layout/: footer.html  navbar.html
task_manager/templates/registration/: login.html  user_create.html  user_delete.html  user_list.html  (+1 more)
task_manager/tests/: test_requests.py  test_views.py
task_manager/users/: forms.py  models.py  permissions.py  urls.py  views.py
tests/: test_views.py
(+14 files in other folders)
