[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Roman <romanbezh@gmail.com>"]
packages = [{include = "task_manager"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.7"
gunicorn = "^20.1.0"
psycopg2 = "^2.9.5"
dj-database-url = "^0.5.0"
python-dotenv = "^1.0.0"
django-bootstrap4 = "^22.3"
whitenoise = "^6.4.0"
requests = "^2.28.2"
flake8 = "4.0.1"
django-filter = "^23.1"
rollbar = "^0.16.3"


[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
